--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <title>Skillpath Guide</title>
+            <title>Skillpath Virtual Guide</title>
             <link rel="stylesheet" type="text/css" href="page.css">
 
         <body class="tank">
