--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <title>Skillpath Virtual Guide</title>
+            <title>Skillpath Guide</title>
             <link rel="stylesheet" type="text/css" href="page.css">
-
+        </head>
         <body class="tank">
             <header class="hatter">
                 <img src="images/LOGO.jpg" class="loger" alt="SIA Logo">
@@ -21,7 +21,6 @@
                         src="https://console.dialogflow.com/api-client/demo/embedded/8809422a-b454-468e-9e9f-d7aaade26f76">
                     </iframe>
                 </main>
-                    
             </center>
             <br />
             <footer>
