--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <title>Skillpath Guide</title>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
             <link rel="stylesheet" type="text/css" href="page.css">
         </head>
         <body class="tank">
             <header class="hatter">
-                <img src="images/LOGO.jpg" class="loger" alt="SIA Logo">
+                <a href="https://skillpath125.github.io/SVG/" target="_blank" ><img src="images/LOGO.jpg" class="loger" alt="SIA Logo">
                 <h1>Skillpath International Academy</h1>
-                <h2>Skillpath Virtual Guide</h2>
+                <h2>Skillpath Virtual Guide</h2></a>
             </header>
             <br />
             <center>
                 <main class="chat-container">
                     <iframe
                         allow="microphone;"
-                        src="https://console.dialogflow.com/api-client/demo/embedded/8809422a-b454-468e-9e9f-d7aaade26f76">
+                        src="https://console.dialogflow.com/api-client/demo/embedded/e222ae2b-edba-426a-82af-273064b7a92b">
                     </iframe>
                 </main>
             </center>
