--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </head>
         <body class="tank">
             <header class="hatter">
-                <a href="https://skillpath125.github.io/SVG/" target="_blank" ><img src="images/LOGO.jpg" class="loger" alt="SIA Logo">
+                <a href="https://skillpath125.github.io/SVG/" target="_blank" ><img src="images/LOGO.jpg" class="loger" alt="SIA Logo"></a>
                 <h1>Skillpath International Academy</h1>
                 <h2>Skillpath Virtual Guide</h2>
             </header>
