--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <title>Skillpath Guide</title>
-            <link rel="stylesheet" type="text/css" href="page.css">
-        </head>
-        <body class="tank">
-            <header class="hatter">
-                <a href="https://skillpath125.github.io/SVG/" target="_blank" ><img src="images/LOGO.jpg" class="loger" alt="SIA Logo"></a>
-                <h1>Skillpath International Academy</h1>
-                <h2>Skillpath Virtual Guide</h2>
-            </header>
-            <br />
-            <center>
-                <main class="chat-container">
-                    <iframe
-                        allow="microphone;"
-                        src="https://console.dialogflow.com/api-client/demo/embedded/8809422a-b454-468e-9e9f-d7aaade26f76">
-                    </iframe>
-                </main>
-            </center>
-            <br />
-            <footer>
-                <div class="copier">
-                    <p>Copyright &copy; Skillpath International Academy 2024. All Rights Reserved.</p>
-                </div>
-            </footer>
-        </body>
-    </html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Skillpath Guide</title>
+    <link rel="stylesheet" type="text/css" href="page.css">
+</head>
+<body class="tank">
+    <header class="hatter">
+        <a href="https://skillpath125.github.io/SVG/" target="_blank">
+            <img src="images/LOGO.jpg" class="loger" alt="Skillpath International Academy Logo">
+        </a>
+        <h1>Skillpath International Academy</h1>
+        <h2>Skillpath Virtual Guide</h2>
+    </header>
+    <main class="chat-container" style="display: flex; justify-content: center; margin: 2em 0;">
+        <iframe
+            allow="microphone;"
+            src="https://console.dialogflow.com/api-client/demo/embedded/8809422a-b454-468e-9e9f-d7aaade26f76"
+            title="Skillpath Virtual Guide Chatbot"
+            aria-label="Skillpath Virtual Guide"
+            width="350"
+            height="430"
+            style="border: none;">
+        </iframe>
+    </main>
+    <footer>
+        <div class="copier">
+            <p>&copy; Skillpath International Academy 2024. All Rights Reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
