--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Skillpath Guide</title>
+    <title>Skillpath Virtual Guide</title>
+    <link rel="icon" type="image/x-icon" href="images/SIA Logo.svg">
+    <!-- Only one Font Awesome link needed -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="page.css">
 </head>
 <body class="tank">
     <header class="hatter">
-        <a href="https://skillpath125.github.io/SVG/" target="_blank">
-            <img src="images/LOGO.jpg" class="loger" alt="Skillpath International Academy Logo">
+        <a href="https://skillpath125.github.io/SVG/" target="_blank" rel="noopener">
+            <img src="images/SIA Logo.png" class="loger" alt="Skillpath International Academy Logo">
         </a>
-        <h1>Skillpath International Academy</h1>
+        <h1 class="liner">Skillpath International Academy</h1>
         <h2>Skillpath Virtual Guide</h2>
     </header>
-    <main class="chat-container" style="display: flex; justify-content: center; margin: 2em 0;">
+
+    <main class="chat-container">
         <iframe
             allow="microphone;"
-            src="https://console.dialogflow.com/api-client/demo/embedded/8809422a-b454-468e-9e9f-d7aaade26f76"
+            src="http://console.dialogflow.com/api-client/demo/embedded/8809422a-b454-468e-9e9f-d7aaade26f76"
             title="Skillpath Virtual Guide Chatbot"
             aria-label="Skillpath Virtual Guide"
-            width="350"
-            height="430"
             style="border: none;">
         </iframe>
     </main>
     <footer>
         <div class="copier">
-            <p>&copy; Skillpath International Academy 2024. All Rights Reserved.</p>
+            <p>&copy; Skillpath International Academy 2025. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
